--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,9 @@
   "prefer-stable": true,
   "require": {
     "php": "~7",
-    "laravel/framework": "5.6.*"
+    "laravel/framework": "5.6.*",
+    "railroad/railcontent": "0.5.*",
+    "tymon/jwt-auth": "1.0.2"
   },
   "require-dev": {
     "phpunit/phpunit": "~7.0",
