--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "php": "~7",
     "laravel/framework": "5.6.*",
     "railroad/railcontent": "0.5.*",
-    "tymon/jwt-auth": "1.0.2"
+    "tymon/jwt-auth": "1.0.2",
+    "vimeo/vimeo-api": "^1.2"
   },
   "require-dev": {
     "phpunit/phpunit": "~7.0",
