--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,14 @@
     "laravel/framework": "5.6.*",
     "railroad/railcontent": "0.5.*",
     "tymon/jwt-auth": "1.0.2",
-    "vimeo/vimeo-api": "^1.2"
+    "vimeo/vimeo-api": "^1.2",
+    "railroad/railtracker": "^3.2"
   },
   "require-dev": {
     "phpunit/phpunit": "~7.0",
-    "phpunit/php-code-coverage": "~6.0"
+    "phpunit/php-code-coverage": "~6.0",
+    "orchestra/testbench": "~3.6",
+    "filp/whoops":"~2.1"
   },
   "autoload": {
     "psr-4": {
