--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
     "tymon/jwt-auth": "1.0.0-rc.2",
     "vimeo/vimeo-api": "^1.2",
     "railroad/railtracker": "^3.2",
-    "railroad/mailora": "0.0.*"
+    "railroad/mailora": "0.0.*",
+    "intervention/image": "^2.3"
   },
   "require-dev": {
     "phpunit/phpunit": "~7.0",
