Adding some packages missing from the composer that are being used in this package.

--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,8 @@
     "vimeo/vimeo-api": "^1.2",
     "railroad/railtracker": "^3.2",
     "railroad/mailora": "0.0.*",
+    "railroad/usora": "2.0.*",
+    "railroad/permissions": "^1.0",
     "intervention/image": "^2.3"
   },
   "require-dev": {
