--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     "phpunit/phpunit": "~7.0",
     "phpunit/php-code-coverage": "~6.0",
     "orchestra/testbench": "~3.6",
+    "mockery/mockery": "^1.0",
     "filp/whoops":"~2.1"
   },
   "autoload": {
