--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "php": "~7",
     "laravel/framework": "5.6.*",
     "railroad/railcontent": "0.5.*",
-    "railroad/ecommerce": "dev-4.0-",
+    "railroad/ecommerce": "4.0.*",
     "tymon/jwt-auth": "1.0.0-rc.2",
     "vimeo/vimeo-api": "^1.2",
     "railroad/railtracker": "^3.2",
