--- a/composer.json
+++ b/composer.json
@@ -1,25 +1,20 @@
 {
   "name": "railroad/musora-api",
+  "type": "library",
+  "license": "MIT",
   "prefer-stable": true,
+  "minimum-stability": "dev",
   "require": {
-    "php": "~7",
-    "laravel/framework": "5.6.*",
-    "railroad/railcontent": "0.5.*",
-    "railroad/ecommerce": "4.0.*",
-    "tymon/jwt-auth": "1.0.0-rc.2",
-    "vimeo/vimeo-api": "^1.2",
-    "railroad/railtracker": "^3.2",
-    "railroad/mailora": "^2.1.5",
-    "railroad/usora": "2.0.*",
-    "railroad/permissions": "^1.0",
-    "intervention/image": "^2.3"
+    "php": "^8.1",
+    "laravel/framework": "^9.0",
+    "railroad/railcontent": "dev-2.0-",
+    "laravel/sanctum": "^2.15"
   },
   "require-dev": {
-    "phpunit/phpunit": "~7.0",
-    "phpunit/php-code-coverage": "~6.0",
-    "orchestra/testbench": "~3.6",
-    "mockery/mockery": "^1.0",
-    "filp/whoops":"~2.1"
+    "phpunit/phpunit": "^9.5.10",
+    "phpunit/php-code-coverage": "^9.2.10",
+    "orchestra/testbench": "^7.4",
+    "dms/phpunit-arraysubset-asserts": "^0.4.0"
   },
   "autoload": {
     "psr-4": {
@@ -29,6 +24,11 @@
   "autoload-dev": {
     "psr-4": {
       "Railroad\\MusoraApi\\Tests\\": "tests/"
+    }
+  },
+  "config": {
+    "allow-plugins": {
+      "kylekatarnls/update-helper": true
     }
   }
 }
