--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
     "php": "^8.1",
     "laravel/framework": "^9.0",
     "railroad/railcontent": "dev-2.0-",
-    "laravel/sanctum": "^2.15"
+    "railroad/ecommerce": "^5.0",
+    "railroad/permissions": "^2.0",
+    "railroad/response": "2.0.x-dev"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.5.10",
