--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     "railroad/railcontent": "dev-2.0-",
     "railroad/ecommerce": "^5.0",
     "railroad/permissions": "^2.0",
-    "railroad/response": "2.0.x-dev"
+    "railroad/response": "2.0.x-dev",
+    "intervention/image": "^3.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.5.10",
