--- a/composer.json
+++ b/composer.json
@@ -5,19 +5,18 @@
   "prefer-stable": true,
   "minimum-stability": "dev",
   "require": {
-    "php": "^8.1",
-    "laravel/framework": "^9.0",
-    "railroad/railcontent": "2.1.*",
-    "railroad/ecommerce": "^5.0",
-    "railroad/permissions": "^2.0",
-    "railroad/response": "2.0.x-dev",
+    "php": "^8.2",
+    "laravel/framework": "^11.9",
+    "railroad/railcontent": "3.0.*",
+    "railroad/ecommerce": "6.0.*",
+    "railroad/permissions": "3.0.*",
+    "railroad/response": "3.0.*",
     "intervention/image": "^2.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^9.5.10",
-    "phpunit/php-code-coverage": "^9.2.10",
-    "orchestra/testbench": "^7.4",
-    "dms/phpunit-arraysubset-asserts": "^0.4.0"
+    "phpunit/phpunit": "^11.0.1",
+    "phpunit/php-code-coverage": "^11.0.1",
+    "orchestra/testbench": "^9.2"
   },
   "autoload": {
     "psr-4": {
@@ -27,12 +26,6 @@
   "autoload-dev": {
     "psr-4": {
       "Railroad\\MusoraApi\\Tests\\": "tests/"
-    }
-  },
-  "config": {
-    "allow-plugins": {
-      "kylekatarnls/update-helper": true,
-      "composer/package-versions-deprecated": true
     }
   }
 }
